add TODOs to test files

--- a/firmware/test/makefile
+++ b/firmware/test/makefile
@@ -1,8 +1,8 @@
-# TODO: Make the "all" task compile + run all of the .cpp files that begin with "test"
+# TODO: `make` should run the tests as described in RUNNING_TESTS
 CPP = g++
 RM = rm -f
 MKDIR = mkdir -p
 INCLUDE_DIRS +=
 all:
-	g++ test1.cpp
-	./a.out
+	g++ test1.cpp # build it
+	./a.out       # run it
