Replace JSON with properties file

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,15 @@
 name=uber-library-example
 version=0.0.10
+license=MIT
 author=Joe Goggins <joe@particle.io>
 maintainer=Wojtek Siudzinski <wojtek@particle.io>
 sentence=A simple library.
 paragraph=Illustrates coding conventions of a Particle Library.
 category=Other
 url=https://github.com/spark/uber-library-example
+repository=spark/uber-library-example
 architectures=avr,particle-core,particle-photon
+dependencies.neopixel=^1.2.3
+dependencies.internet-button=*
+build.particle-core.environment.CFLAGS=-DSTM32F10X_MD
+build.particle-photon.buildpack=0.4.x
