Update library config example

--- a/library.properties
+++ b/library.properties
@@ -8,8 +8,8 @@ paragraph=Illustrates coding conventions of a Particle Library.
 category=Other
 url=https://github.com/spark/uber-library-example
 repository=spark/uber-library-example
-architectures=avr,particle-core,particle-photon
+architectures=avr,spark-core,particle-photon,particle-p1
 dependencies.neopixel=^1.2.3
 dependencies.internet-button=*
-build.particle-core.environment.CFLAGS=-DSTM32F10X_MD
-build.particle-photon.buildpack=0.4.x
+build.spark-core.environment.CFLAGS=-DSTM32F10X_MD
+build.particle-photon.firmware=particle@0.5.0
