Add missing filelds

--- a/library.properties
+++ b/library.properties
@@ -11,5 +11,8 @@ repository=spark/uber-library-example
 architectures=avr,spark-core,particle-photon,particle-p1
 dependencies.neopixel=^1.2.3
 dependencies.internet-button=*
-build.spark-core.environment.CFLAGS=-DSTM32F10X_MD
+test-dependencies.test-helper=*
+example-dependencies.blynk=*
+build.spark-core.environment.CFLAGS=-O2
 build.particle-photon.firmware=particle@0.5.0
+build.particle-p1.define.DEBUG=1
